# audacity

./: .gitignore  CMakeLists.txt
au3/libraries/: CMakeLists.txt
au3/libraries/au3-audio-devices/: CMakeLists.txt
au3/libraries/au3-audio-io/: CMakeLists.txt
au3/libraries/au3-audio-unit/: AudioUnitEffectsModule.cpp  AudioUnitEffectsModule.h  CMakeLists.txt
au3/libraries/au3-builtin-effects/: CMakeLists.txt  ChangeSpeedBase.cpp  Generator.cpp  PaulstretchBase.cpp  RepeatBase.cpp  SilenceBase.cpp  TruncSilenceBase.cpp
au3/libraries/au3-cloud-audiocom/: CMakeLists.txt  OAuthService.cpp  ServiceConfig.cpp  ServiceConfig.h  UploadService.cpp  UserService.cpp
au3/libraries/au3-components/: PluginProvider.h
au3/libraries/au3-effects/: EffectBase.h  EffectPlugin.h  LoadEffects.cpp  LoadEffects.h  PerTrackEffect.cpp
au3/libraries/au3-fft/: CMakeLists.txt
au3/libraries/au3-file-formats/: CMakeLists.txt
au3/libraries/au3-import-export/: CMakeLists.txt  ExportPlugin.cpp
au3/libraries/au3-ladspa/: LadspaEffectsModule.cpp  LadspaEffectsModule.h
au3/libraries/au3-lv2/: CMakeLists.txt  LoadLV2.cpp  LoadLV2.h
au3/libraries/au3-module-manager/: PluginManager.cpp
au3/libraries/au3-musehub/: CMakeLists.txt  MuseHubService.cpp
au3/libraries/au3-network-manager/: CMakeLists.txt
au3/libraries/au3-note-track/: CMakeLists.txt
au3/libraries/au3-nyquist-effects/: CMakeLists.txt  LoadNyquist.cpp  LoadNyquist.h  NyquistBase.cpp  NyquistBase.h
au3/libraries/au3-project-file-io/: CMakeLists.txt
au3/libraries/au3-sqlite-helpers/: CMakeLists.txt
au3/libraries/au3-strings/: Internat.h
au3/libraries/au3-time-and-pitch/: CMakeLists.txt
au3/libraries/au3-track-selection/: CMakeLists.txt  (+1 more)
au3/locale/: update_po_files.sh
buildscripts/cmake/: SetupDevEnvironment.cmake
share/: CMakeLists.txt
share/nyquist-plug-ins/: CMakeLists.txt  ShelfFilter.ny  SpectralEditMulti.ny  SpectralEditParametricEQ.ny  SpectralEditShelves.ny  StudioFadeOut.ny  adjustable-fade.ny  beat.ny  clipfix.ny  crossfadeclips.ny  crossfadetracks.ny  delay.ny  equalabel.ny  highpass.ny  label-sounds.ny  legacy-limiter.ny  lowpass.ny  noisegate.ny  notch.ny  nyquist-plug-in-installer.ny  pluck.ny  rhythmtrack.ny  rissetdrum.ny  rms.ny  sample-data-export.ny  sample-data-import.ny  spectral-delete.ny  tremolo.ny  vocoder.ny
share/nyquist-runtime/: CMakeLists.txt
share/workspaces/: CMakeLists.txt  Classic.mws  Music.mws
src/: CMakeLists.txt
src/app/: CMakeLists.txt  appfactory.cpp  cmdoptions.h  commandlineparser.cpp  guiapp.cpp  pluginregistrationapp.cpp
src/au3cloud/: iau3audiocomservice.h
src/au3wrap/: CMakeLists.txt  au3wrapmodule.cpp  au3wrapmodule.h
src/effects/: CMakeLists.txt
src/project/: CMakeLists.txt  project.qrc  projectmodule.cpp
src/projectscene/: iprojectsceneconfiguration.h  iprojectviewstate.h  projectscene.qrc  projectscenemodule.cpp
src/shared/: CMakeLists.txt
src/spectrogram/: CMakeLists.txt  ifrequencyselectioncontroller.h  ispectrogramservice.h  spectrogram.qrc  spectrogrammodule.cpp
src/trackedit/: CMakeLists.txt  iselectioncontroller.h  trackeditmodule.cpp
(+322 files in other folders)
